VS_17_8_0 in docker container, and tweaked and better documented source of --add lines in installation of Visual Studio

--- a/DockerBuildContainers/Windows-VS2k22/Dockerfile
+++ b/DockerBuildContainers/Windows-VS2k22/Dockerfile
@@ -45,19 +45,48 @@ ARG VS_17_3_6=https://download.visualstudio.microsoft.com/download/pr/5c9aef4f-a
 ARG VS_17_4_2=https://download.visualstudio.microsoft.com/download/pr/f3f8db49-2cd0-43df-9ced-12dcb6b3954b/8f91b73ed92af58f25d4fe12e7963619af9e8b2997b9a83ec520fe3f52a40099/vs_BuildTools.exe
 ARG VS_17_5_5=https://download.visualstudio.microsoft.com/download/pr/7ac7457f-ba6e-4a12-ba2c-1adebad20070/619bb425ddaecbbb256036b1b2d8b5756c64cb1b1dffe5251facf9dabdd88258/vs_BuildTools.exe
 ARG VS_17_6_4=https://download.visualstudio.microsoft.com/download/pr/33081bfc-10f1-42d4-8f5a-df6709b8b105/45260991ae48300c333ff98ce5d066064cb2ae03433b126cc5fdce1926ff8807/vs_BuildTools.exe
-ARG VS_17_7_0=https://download.visualstudio.microsoft.com/download/pr/82cc7543-5e64-4e74-b990-5ebdc333739f/102a97bd21844fea39df874d028dc9281eeb138f060d14dcc4f0a0feafd69f8b/vs_BuildTools.exe
-ARG VS_17_7_1=https://download.visualstudio.microsoft.com/download/pr/cda788db-d262-4261-ac9e-064293a93399/db1fbd87816ca23aa0c0e487b78129794b61aec1e12b30c2fc277b3192aa8913/vs_BuildTools.exe
-ARG VS_17_7_3=https://download.visualstudio.microsoft.com/download/pr/1d66edfe-3c83-476b-bf05-e8901c62ba7f/bac71effb5a23d7cd1a81e5f628a0c8dcb7e8a07e0aa7077c853ed84a862dceb/vs_BuildTools.exe
-ARG VS_17_7_4=https://download.visualstudio.microsoft.com/download/pr/e514a25b-a89d-4051-a63c-05ccd9be41e9/6ca2980598be2c888c3bb3b288c688a04b3fc1f1acb62d7c3cdaada47b36c3ea/vs_BuildTools.exe
-ARG VS_17_7_5=https://download.visualstudio.microsoft.com/download/pr/8bee1b10-0767-416b-a3c0-d658a719947b/58afd70e8fbc37b1a3f48d2950c90b1a9f4a926bb52adef3749046cd70ab14dc/vs_BuildTools.exe
 ARG VS_17_7_6=https://download.visualstudio.microsoft.com/download/pr/ebbb3a8f-0b8f-4c9d-ac08-5e244e84b4fe/59b6da403afe6892d4531adb5c58dc52bff5db1e2173477ad7f9cf4b2c490277/vs_BuildTools.exe
+ARG VS_17_8_0=https://download.visualstudio.microsoft.com/download/pr/eb105084-8c42-4491-a292-51b4ab48d847/8e07efcfc41db883fa4e8136c9bfb572aadfcc98512c205a7b9e43564ee404ff/vs_BuildTools.exe
 
 SHELL ["powershell"]
-RUN Invoke-WebRequest "$env:VS_17_7_6" \
+RUN Invoke-WebRequest "$env:VS_17_8_0" \
     -OutFile "$env:TEMP\vs_buildtools.exe" -UseBasicParsing
 
 ## ALTERNATE COMPONENT LINES TO CONSIDER
 #    --add Microsoft.VisualStudio.Component.Windows10SDK.19041 \
+#    --add Microsoft.VisualStudio.Component.VC.143 \
+
+#
+# Where to look for list of these available components?
+#   o   visual studio installer tool
+#       'export' function and GUI to select.
+#       C:\Users\lewis\OneDrive\Documents\.vsconfig
+#   o   WebPage
+#       https://learn.microsoft.com/en-us/visualstudio/install/workload-component-id-vs-build-tools?view=vs-2022
+#
+
+# ADD SOON Microsoft.VisualStudio.Component.VC.Modules.x86.x64
+
+# According to https://learn.microsoft.com/en-us/visualstudio/install/workload-component-id-vs-build-tools?view=vs-2022
+#   Microsoft.VisualStudio.Workload.VCTools contains many of these below components, but selecting the workload
+#   doesn't appear to do anything. So we have to install needed components manually anyhow...
+
+#
+# recommended or optional from Microsoft.VisualStudio.Workload.VCTools
+#
+# specific version
+    # --add Microsoft.VisualStudio.Component.VC.14.38.17.8.x86.x64 \
+    # --add Microsoft.VisualStudio.Component.VC.14.38.17.8.ATL \
+    # --add Microsoft.VisualStudio.Component.VC.14.38.17.8.CLI.Support \
+    # --add Microsoft.VisualStudio.Component.VC.14.38.17.8.MFC \
+# latest ()
+    # --add Microsoft.VisualStudio.Component.VC.ATL \
+    # --add Microsoft.VisualStudio.Component.VC.ATLMFC \
+    # --add Microsoft.VisualStudio.Component.VC.CLI.Support \
+    # --add Microsoft.VisualStudio.Component.VC.Tools.x86.x64 \ 
+
+# Probably add soon
+    # --add Microsoft.VisualStudio.Component.Vcpkg \
 
 # del stuff to minimize space left in the filesystem layer
 SHELL ["cmd", "/S", "/C"]
@@ -65,14 +94,14 @@ RUN (%TEMP%\vs_buildtools.exe \
     --installPath "%ProgramFiles%\Microsoft Visual Studio\2022\BuildTools" \
     --add Microsoft.VisualStudio.Workload.MSBuildTools  \
     --add Microsoft.VisualStudio.Workload.UniversalBuildTools \
-    --add Microsoft.VisualStudio.Workload.VCTools  \
+    --add Microsoft.VisualStudio.Workload.VCTools \
+    --add Microsoft.VisualStudio.Component.VC.ASAN \
+    --add Microsoft.VisualStudio.Component.VC.CLI.Support \
+    --add Microsoft.VisualStudio.Component.VC.CMake.Project \ 
     --add Microsoft.VisualStudio.Component.VC.ATL \
     --add Microsoft.VisualStudio.Component.VC.ATLMFC \
-    --add Microsoft.VisualStudio.Component.Windows10SDK.20348 \
     --add Microsoft.VisualStudio.Component.VC.Tools.x86.x64 \ 
-    --add Microsoft.VisualStudio.Component.VC.CMake.Project \ 
-    --add Microsoft.VisualStudio.Component.VC.ASAN \
-    --add Microsoft.VisualStudio.Component.VC.143 \
+    --add Microsoft.VisualStudio.Component.Windows10SDK.20348 \
     --quiet --wait --norestart --noUpdateInstaller \
     || IF "%ERRORLEVEL%"=="3010" EXIT 0) \
     && (del /f /s /q "%TEMP%\*.*")
