--- a/ThirdPartyComponents/boost/Makefile
+++ b/ThirdPartyComponents/boost/Makefile
@@ -243,7 +243,7 @@ B2_CONFIGURATION_ARGS +=	-d2
 #SHOW VARIABLES - B2_CONFIGURATION_ARGS +=	-d7
 
 B2_CONFIGURATION_ARGS +=	--prefix=$(call FUNCTION_CONVERT_FILEPATH_TO_COMPILER_NATIVE,$(PER_CONFIGURATION_BUILDS_DIR))
-ifeq (0,$(ENABLE_ASSERTIONS))
+ifeq (0,$(AssertionsEnabled))
 B2_CONFIGURATION_ARGS += variant=release
 else
 B2_CONFIGURATION_ARGS += variant=debug
