libxml2 build static libs

--- a/ThirdPartyComponents/libxml2/Makefile
+++ b/ThirdPartyComponents/libxml2/Makefile
@@ -74,6 +74,7 @@ CMAKE_ARGS+=	-D LIBXML2_WITH_ICONV="OFF"
 CMAKE_ARGS+=	-D LIBXML2_WITH_LZMA="OFF"
 CMAKE_ARGS+=	-D LIBXML2_WITH_PYTHON="OFF"
 
+CMAKE_ARGS+=	-D BUILD_SHARED_LIBS="OFF"
 
 all:
 ifeq (${CONFIGURATION},)
