added embeddings to regtest 34 (xml) and additional (DOM) test - very primitive but a start

--- a/Tests/34/Makefile
+++ b/Tests/34/Makefile
@@ -6,3 +6,13 @@ endif
 
 TEST_NUM=$(shell basename `pwd`)
 include $(StroikaRoot)/Tests/Makefile-Test-Template.mk
+
+$(ObjDir): $(SrcDir)
+
+$(ObjDir)personal.xml.embed:
+	xxd -i personal.xml $(ObjDir)personal.xml.embed
+
+$(ObjDir)personal.xsd.embed:
+	xxd -i personal.xsd $(ObjDir)personal.xsd.embed
+
+$(ObjDir)Test${OBJ_SUFFIX}:	$(ObjDir)personal.xml.embed  $(ObjDir)personal.xsd.embed
