fixed bad checkin

--- a/DockerBuildContainers/Makefile
+++ b/DockerBuildContainers/Makefile
@@ -25,7 +25,7 @@ EXTRA_DOCKER_BUILD_ARGS_=
 # Due to https://stroika.atlassian.net/browse/STK-742 - you may see the error message building "Invoke-WebRequest : The remote name could not be resolved"
 #	- add   --network "Default Switch" 
 #
-EXTRA_DOCKER_BUILD_ARGS_= --network "Default Switch" 
+#EXTRA_DOCKER_BUILD_ARGS_= --network "Default Switch" 
 #
 # to build this you may need  --storage-opts "size 100GB", but that currently doesn't work with build, so set
 # in docker windows configuration settings (can get from docker gui - settings/Docker Engine)
