added another regtest for schema doc parsing xml

--- a/Tests/34/Makefile
+++ b/Tests/34/Makefile
@@ -9,10 +9,16 @@ include $(StroikaRoot)/Tests/Makefile-Test-Template.mk
 
 $(ObjDir): $(SrcDir)
 
+$(ObjDir)ReferenceContent-2012-03.xsd.embed:
+	xxd -i ReferenceContent-2012-03.xsd $@
+
+$(ObjDir)HealthFrameWorks_v3.xml.embed:
+	xxd -i HealthFrameWorks_v3.xml $@
+
 $(ObjDir)personal.xml.embed:
-	xxd -i personal.xml $(ObjDir)personal.xml.embed
+	xxd -i personal.xml $@
 
 $(ObjDir)personal.xsd.embed:
-	xxd -i personal.xsd $(ObjDir)personal.xsd.embed
+	xxd -i personal.xsd $@
 
-$(ObjDir)Test${OBJ_SUFFIX}:	$(ObjDir)personal.xml.embed  $(ObjDir)personal.xsd.embed
+$(ObjDir)Test${OBJ_SUFFIX}:	$(ObjDir)personal.xml.embed  $(ObjDir)personal.xsd.embed $(ObjDir)HealthFrameWorks_v3.xml.embed $(ObjDir)ReferenceContent-2012-03.xsd.embed
