--- a/ThirdPartyComponents/libxml2/Makefile
+++ b/ThirdPartyComponents/libxml2/Makefile
@@ -142,8 +142,8 @@ ifeq ($(DETECTED_HOST_OS),Darwin)
 	@tar xf ${ZIPPED_SOURCES_FILE_} -C $@ --strip-components 1
 else ifneq ($(findstring $(DETECTED_HOST_OS),MSYS-Cygwin),)
 	@# Under docker, we get failure to extract slink to this file unless its there first - but this works around the issue --LGP 2023-12-18
-	@tar xf ${ZIPPED_SOURCES_FILE_} --no-same-owner --strip-components=1 libxml2-${libxml2_VERSION_}/test/relaxng/tutorA.rng
-	@tar xf ${ZIPPED_SOURCES_FILE_} --no-same-owner --strip-components=1
+	@tar xf ${ZIPPED_SOURCES_FILE_} --no-same-owner --directory $@ --strip-components=1 libxml2-${libxml2_VERSION_}/test/relaxng/tutorA.rng
+	@tar xf ${ZIPPED_SOURCES_FILE_} --no-same-owner --directory $@ --strip-components=1
 else
 	@tar xf ${ZIPPED_SOURCES_FILE_} --no-same-owner --directory $@ --strip-components=1
 endif
