dont fail saving locks i file files missing on github actions macos

--- a/.github/workflows/build-N-test.yml
+++ b/.github/workflows/build-N-test.yml
@@ -197,7 +197,7 @@ jobs:
         if: always()
         run: |
           mkdir /tmp/LOGS-ARCHIVE
-          cp $TMPDIR/Trace*.txt /tmp/LOGS-ARCHIVE
+          cp $TMPDIR/Trace*.txt /tmp/LOGS-ARCHIVE || :
       - name: DEBUG Workaround GitHub-Actions-MacOS Issue with env.TMPDIR
         if: always()
         run: |
