--- a/ThirdPartyComponents/boost/Makefile
+++ b/ThirdPartyComponents/boost/Makefile
@@ -63,9 +63,12 @@ endif
 
 ### Haven't found any backup/mirrors and this only stores the last few versions. @todo - find a better backup! 
 FETCHURLS=
-FETCHURLS+=https://boostorg.jfrog.io/artifactory/main/release/$(VERSION_WITH_DOTS)/source/boost_$(VERSION).tar.gz
 FETCHURLS+=https://sourceforge.net/projects/boost/files/boost/$(VERSION_WITH_DOTS)/boost_$(VERSION).tar.gz/download
-FETCHURLS+=https://boostorg.jfrog.io/artifactory/main/beta/$(VERSION_WITH_2DOTS).beta1/source/boost_$(VERSION).tar.gz
+# NOTE: github repo appears to be incomplete, not including the submodules like boost-build
+#FETCHURLS+=https://github.com/boostorg/boost/archive/refs/tags/boost-$(VERSION_WITH_DOTS).tar.gz
+# NOTE: since december 30 2023, jfrog seems broken - maybe temporarily...
+# FETCHURLS+=https://boostorg.jfrog.io/artifactory/main/release/$(VERSION_WITH_DOTS)/source/boost_$(VERSION).tar.gz
+# FETCHURLS+=https://boostorg.jfrog.io/artifactory/main/beta/$(VERSION_WITH_2DOTS).beta1/source/boost_$(VERSION).tar.gz
 #FETCHURLS+=ftp://ftp.sophists.com/Pub/Mirror/boost_$(VERSION).tar.gz
 #(reasonable but breaks github 100mb limit)FETCHURLS+=file:///../Mirror/boost_$(VERSION).tar.gz
 ### the github.com/boostorg/boost/archive appear not fully compatible/real mirror of above - very different size and my build scripts dont work
